argocd/real-app/mongo-express-deployment.yml
# create deployment for mongo-express
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-express-deployment
  labels:
    app: mongo-express
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo-express
  template:
    metadata:
      labels:
        app: mongo-express
    spec:
      containers:
      - name: mongo-express
        image: mongo-express
        ports:
        - containerPort: 8081
        resources: 
          limits:
            memory: "128Mi"
            cpu: "500m"
          requests:
            memory: "64Mi"
            cpu: "250m"

---

apiVersion: v1
kind: Service
metadata:
  name: mongoexpress-service
spec:
  selector:
    app: mongo-express
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8081

---
# Create ingress for mongo-express
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mongo-express-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: hec-api.nasa-impact.net
    http:
      paths:
      - backend:
          service:
            name: mongoexpress-service
            port:
              number: 80
        path: /mongo
        pathType: Prefix
